--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,9 +69,9 @@ nav:
           - 虚拟私有云 VPC:
               - 产品介绍:
                   - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/什么是虚拟私有云.md
-          - 企业路由器 ER:
-      - 腾讯云:
+      #     - 企业路由器 ER:
+      # - 腾讯云:
       - 微软云:
           - 虚拟机:
               - 什么是虚拟私有云: 云上网络/微软云/虚拟机/Azure上的Red Hat Enterprise Linux映像.md
-      - 移动云:
+      # - 移动云:
