--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,8 @@ nav:
   - 广域网:
       - BGP:
           - BGP基础: 广域网/BGP/BGP基础.md
+      - OSPF:
+          - OSPF基础: 广域网/OSPF/OSPF基础.md
   - 云上网络:
       - 华为云:
           - 虚拟私有云 VPC:
