--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,3 +64,10 @@ nav:
   - 广域网:
     - BGP:
       - BGP基础: 广域网/BGP/BGP基础.md
+    - OSPF:
+      - OSPF基础: 广域网/OSPF/OSPF基础.md
+  - 云上网络:
+    - 华为云:
+      - 虚拟私有云 VPC:
+        - 产品介绍:
+          - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/什么是虚拟私有云.md
