--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,3 +71,6 @@ nav:
       - 虚拟私有云 VPC:
         - 产品介绍:
           - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/什么是虚拟私有云.md
+  - 管理: 
+    - 招聘:
+      - 实习生面试: 实习生面试.md
