--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,19 +1,48 @@
 site_name: 网络之路
 site_author: renjiangzhou@163.com
 
-# # 导航栏
-# nav:
-#   - 主页: index.md
-#   - 云上网络:
-#     - 华为云:
-#       - 虚拟私有云 VPC:
-#         - 产品介绍:
-#           - 图解虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/001-图解虚拟私有云.md
-#           - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/002-什么是虚拟私有云.md
-#           - 产品优势: 云上网络/华为云/虚拟私有云 VPC/01-产品介绍/003-产品优势.md
-#     - 微软云:
-#       - 虚拟机:
-#         - Azure上的Red Hat Enterprise Linux映像: 云上网络/微软云/虚拟机/Azure上的Red Hat Enterprise Linux映像.md
+# 导航栏
+nav:
+  - 主页: index.md
+  - 云上网络:
+    - 华为云:
+      - 虚拟私有云 VPC:
+        - 图解虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/001-图解虚拟私有云.md
+        - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/002-什么是虚拟私有云.md
+        - 产品优势: 云上网络/华为云/虚拟私有云 VPC/003-产品优势.md
+        - "云上网络/华为云/虚拟私有云 VPC/云专线接入方案介绍.md"
+  - 网络SOP:
+    - 配置规范: 
+      - 概要: 网络SOP/配置规范/000-说明.md
+      - 1 基础配置: 
+        - 配置用户登录的配置规范: 网络SOP/配置规范/01 基础配置/配置用户登录的配置规范.md
+      - 2 系统管理: 
+        - NTP: 网络SOP/配置规范/02 系统管理/NTP.md
+        - NQA: 网络SOP/配置规范/02 系统管理/NQA.md
+      - 3 可靠性: 
+        - VRRP的配置规范: 网络SOP/配置规范/03 可靠性/VRRP的配置规范.md
+        - BFD的配置规范: 网络SOP/配置规范/03 可靠性/BFD的配置规范.md
+        - 多机备份的配置规范: 网络SOP/配置规范/03 可靠性/多机备份的配置规范.md
+      - 4 接口管理: 
+        - 网络SOP/配置规范/004-接口管理.md
+  - 博客建设:
+    - 官方文档参考: 博客建设/001-官方文档.md
+    - 标题加粗样式: 博客建设/002-标题加粗样式.md
+  # - 云上网络:
+  #   - 华为云:
+  #     - 虚拟私有云 VPC:
+  #       - 产品介绍:
+  #         - 图解虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/001-图解虚拟私有云.md
+  #         - 什么是虚拟私有云: 云上网络/华为云/虚拟私有云 VPC/002-什么是虚拟私有云.md
+  #         - 产品优势: 云上网络/华为云/虚拟私有云 VPC/003-产品优势.md
+  #         - "云上网络/华为云/虚拟私有云 VPC/云专线接入方案介绍.md"
+  #     - 弹性公网IP EIP:
+  #       - 产品介绍:
+  #         - "云上网络/华为云/弹性公网IP EIP/002-什么是弹性公网IP.md"
+  #   - 微软云:
+  #     - 虚拟机:
+  #       - Azure上的Red Hat Enterprise Linux映像: 云上网络/微软云/虚拟机/Azure上的Red Hat Enterprise Linux映像.md
+
 #   - 管理: 
 #     - 招聘:
 #       - 实习生面试: 实习生面试.md
@@ -26,8 +55,8 @@ site_author: renjiangzhou@163.com
 theme:    # 主题
   name: material    # 名称
   language: zh    # 语言，可设置多套切换
-  feature:
-    tabs: true
+  # feature:
+  #   tabs: true
 
   highlightjs: true    # JavaScript库在代码块中突出显示源代码。 默认值：True。
   hljs_languages:    # 默认情况下，highlight.js仅支持23种常用语言。在此列出额外需要支持的语言。
@@ -40,59 +69,59 @@ theme:    # 主题
     - navigation.tabs.sticky    # 粘性导航选项卡
     - navigation.sections   # 次级目录在侧边栏中呈现为组，与tabs同存则有2级导航
 
+extra_css:
+  - stylesheets/extra.css
+
 markdown_extensions:  #推荐配置Markdown基本语法及其扩展
   - toc:    # 目录
-      toc_depth: 3    # 目录深度，默认6，0则隐藏
+      toc_depth: 6    # 目录深度，默认6，0则隐藏
       permalink: true
-  - abbr    # 缩写或名词
-  - pymdownx.snippets  #片段，将任意文件或部分内容嵌入到文档中  
+
+  - attr_list    # 属性列表扩展允许使用特殊语法将 HTML 属性和 CSS 类添加到几乎每个Markdown 内联和块级元素。
+  - md_in_html    # Markdown in HTML扩展允许在 HTML 内部编写 Markdown，这对于使用自定义元素包装 Markdown 内容非常有用。
+
   - admonition    # 警告或标注
-  - pymdownx.details  #细节折叠
-  - pymdownx.superfences  #超级围栏
-  - attr_list   #属性列表（按钮-颜色图标）
-  - def_list   #定义列表
-  - footnotes  #行内脚注
-  - meta   #元数据
-  - md_in_html  #HTML 中的 Markdown
-  - pymdownx.arithmatex:  # 数学公式
-      generic: true  
-  - pymdownx.betterem:   #粗体斜体
-      smart_enable: all
-  - pymdownx.highlight    # 代码高亮，对代码块（SuperFences）和行内代码块（InlineHilite）的语法突出显示
-  - pymdownx.inlinehilite   # 行内高亮
-  - pymdownx.smartsymbols   # 智能符号
-  - pymdownx.tabbed:    # 内容选项卡
-      alternate_style: true   # 启用内容选项卡替代样式，必须开启
-  - pymdownx.tasklist:    # 任务列表
-      custom_checkbox: true   # 切换复选框的呈现样式，将原生复选框样式替换为漂亮的图标
-  - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.details    # 细节折叠
+  - pymdownx.superfences    # 超级围栏
 
-extra_javascript:
-  - javascripts/baidu-tongji.js  #百度统计
-  - javascripts/mathjax.js  #数学公式的JS
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - tables    # 启用 Markdown 表格支持，默认启用
 
-extra:
-  social:   # 页脚
-    - icon: fontawesome/brands/twitter    # 社交链接
-      link: https://twitter.com/squidfunk
-      name: squidfunk on Twitter    # 一般自动提取
-    - icon: fontawesome/solid/paper-plane   # 电子邮件
-      link: mailto:admin@yiruru.com
+#   - pymdownx.superfences
+#   - pymdownx.tabbed:
+#       alternate_style: true
 
+#   - abbr    # 缩写或名词
+#   - pymdownx.snippets  #片段，将任意文件或部分内容嵌入到文档中  
+
+
+#   - def_list   #定义列表
+#   - footnotes  #行内脚注
+#   - meta   #元数据
+
+#   - pymdownx.arithmatex:  # 数学公式
+#       generic: true  
+#   - pymdownx.betterem:   #粗体斜体
+#       smart_enable: all
+#   - pymdownx.highlight    # 代码高亮，对代码块（SuperFences）和行内代码块（InlineHilite）的语法突出显示
+#   - pymdownx.inlinehilite   # 行内高亮
+#   - pymdownx.smartsymbols   # 智能符号
+#   - pymdownx.tabbed:    # 内容选项卡
+#       alternate_style: true   # 启用内容选项卡替代样式，必须开启
+#   - pymdownx.tasklist:    # 任务列表
+#       custom_checkbox: true   # 切换复选框的呈现样式，将原生复选框样式替换为漂亮的图标
+
+# extra_javascript:
+#   - javascripts/baidu-tongji.js  #百度统计
+#   - javascripts/mathjax.js  #数学公式的JS
+#   - https://polyfill.io/v3/polyfill.min.js?features=es6
+#   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
   - search
-  - blog:
-      blog_toc: true
-      post_readtime: true    # 使用此设置来控制插件是否应自动计算帖子的阅读时间，然后将其呈现在帖子摘录以及帖子本身中：
-      post_readtime_words_per_minute: 300    # 使用此设置可更改读者在计算帖子阅读时间时每分钟预计阅读的字数。每分钟265个字的阅读时间被认为是成年人的平均阅读时间。
-      archive: false    # 使用此设置可启用或禁用存档页面。存档页面以相反的顺序显示特定间隔（例如年、月等）的所有帖子。
-      archive_toc: true    # 使用此设置可利用目录在所有存档页面上显示帖子标题。
-      draft: false    # 渲染草稿帖子在部署预览中很有用。使用此设置可指定插件在构建项目时是否应包含标记为草稿的帖子：
-      draft_on_serve: false    # 该插件可以自动将未来日期的帖子标记为草稿。当日期超过今天时，除非明确标记为草稿，否则在构建项目时会自动包含该帖子：
+  - glightbox:    # glightbox插件,可以为您的文档添加图像缩放功能，
+      width: 100%    # 
+      height: auto    # 
+      zoomable: true    # 
+      draggable: true    # 
+      closeButton: true    # 
+      closeOnOutsideClick: true    # 
